--- a/react-vite-project/package.json
+++ b/react-vite-project/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "^3.1.1",
     "vite": "^5.0.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
