--- a/react-vite-project/package.json
+++ b/react-vite-project/package.json
@@ -16,8 +16,11 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
+    "@tanstack/react-query": "^5.17.8",
+    "axios": "^1.6.3",
     "react": " ^17.0.0 || ^18.2.0",
     "react-dom": " ^17.0.0 || ^18.2.0",
+    "react-query": "^3.39.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "msw": "^2.0.11",
     "prettier": "^3.1.1",
     "vite": "^5.0.8"
   },
